Teste de caminho de imagem

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class=" d-flex justify-content-center gap-4">
               <a href=""><img src="/static/img/redes/icons8github48.png" alt="github"></a>
 
-              <a href=""><img src="/static/img/redes/icons8instagramvelho48.png" alt="instagram"></a>
+              <a href=""><img src="static\img\icons\icons8instagramvelho48.png" alt="instagram"></a>
 
               <a href=""><img src="/static/img/redes/icons8linkedin48.png" alt="linkedin"></a>
             </div>
