--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             <span>Copyragt ₢ Cássio Bindado Todos os diretos reservados</span>
 
             <div class=" d-flex justify-content-center gap-4">
-              <a href=""><img src="/static/img/redes/icons8github48.png" alt="github"></a>
+              <a href=""><img src="static/img/redes/icons8github48.png" alt="github"></a>
 
-              <a href=""><img src="static\img\icons\icons8instagramvelho48.png" alt="instagram"></a>
+              <a href=""><img src="static/img/redes/icons8instagramvelho48.png" alt="instagram"></a>
 
-              <a href=""><img src="/static/img/redes/icons8linkedin48.png" alt="linkedin"></a>
+              <a href=""><img src="static/img/redes/icons8linkedin48.png" alt="linkedin"></a>
             </div>
         </diV>
 
