Ajustar caminho das imagen de projeto

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -45,7 +45,7 @@
 
         </div>
         
-
+        <!-- Cards deprojetos -->
         <div class=" d-flex flex-column gap-5 d-lg-flex gap-lg-5 flex-lg-row">
 
           <div class="card">
